<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">AssetOwl</string>
    <string name="app_name_dev">AssetOwl dev</string>
    <string name="app_name_stub">AssetOwl stub</string>

    <!-- Strings related to login -->
    <string name="login_title">Please login</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="error_invalid_username">Please enter a valid username address</string>
    <string name="error_invalid_password">Please enter a valid password</string>
    <string name="error_invalid_username_or_password">Invalid username or password</string>
    <string name="permission_rationale">Contacts permissions are needed for providing username completions.</string>
    <string name="assetowl_needs_internet_connection_to_work">AssetOwl needs internet connection to work.</string>
    <string name="please_connect_to_the_internet_and_try_again">Please connect to the internet and try again.</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_regular_medium">sans-serif-medium</string>
    <string name="exit_assetowl">EXIT ASSETOWL</string>
    <string name="unable_to_connect_with_assetowl">Unable to connect to AssetOwl. Please try again in a few moments.</string>
    <string name="audit_templates">Audit templates</string>
    <string name="photo_update">Photo update</string>
    <string name="tutorials">Tutorials</string>
    <string name="app_support">App Support</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="questions">Questions</string>
    <string name="audit">Audits</string>
    <string name="properties">Property</string>
    <string name="answer">Answered</string>
    <string name="status">Status</string>
    <string name="my_audits">My audits</string>
    <string name="text_audits">audits</string>
    <string name="text_new">new</string>
    <string name="new_audits">new audits</string>
    <string name="in_progress">in progress</string>
    <string name="submitted">submitted</string>
    <string name="would_you_like_to">Would you like to</string>
    <string name="start_with_spaces">\u00A0start\u00A0</string>
    <string name="a_new_audit">a new audit?</string>
    <string name="welcome_to_assetowl">Welcome to AssetOwl!</string>
    <string name="text_started">started</string>
    <string name="text_submitted">submitted</string>
    <string name="step1_select_template">Step 1. Select templates</string>
    <string name="loading_assetowl">Loading AssetOwl...</string>
    <string name="thanks_for_waiting">Thanks for waiting</string>
</resources>
