<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
            <group
                android:id="@+id/group1"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_dashboard"
                    android:icon="@drawable/ic_my_dashboard_icon"
                    android:title="@string/my_audits"/>
            </group>

            <group
                android:id="@+id/group2"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_item_tutorial"
                    android:icon="@drawable/ic_tutorials_icon"
                    android:title="@string/tutorials" />

                <item
                    android:id="@+id/menu_item_app_support"
                    android:icon="@drawable/ic_app_support_icon"
                    android:title="@string/app_support" />

                <item
                    android:id="@+id/menu_item_settings"
                    android:icon="@drawable/ic_settings_icon"
                    android:title="@string/settings" />

                <item android:id="@+id/menu_item1"
                    android:title="">
                </item>
                <item android:id="@+id/menu_item2"
                    android:title="">
                </item>

                <item android:id="@+id/menu_item_logout"
                    android:icon="@drawable/ic_log_out_icon"
                    android:title="@string/log_out">
                </item>
            </group>
</menu>