<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AssetOwl.Component.TemplatesList.Header">
    <View
        android:layout_width="@dimen/templates_list_column_width_selector"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="@dimen/templates_list_column_width_id"
        android:layout_height="wrap_content"
        style="@style/AssetOwl.Component.TemplatesList.Header.TextView"
        android:text="@string/id"/>
    <TextView
        android:id="@+id/textview_audit_templates"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        style="@style/AssetOwl.Component.TemplatesList.Header.TextView"
        android:text="@string/audit_templates"/>
    <TextView
        android:layout_width="@dimen/templates_list_column_width_questions"
        android:layout_height="wrap_content"
        style="@style/AssetOwl.Component.TemplatesList.Header.TextView"
        android:text="@string/questions"/>
</LinearLayout>