<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.assetowl.android.ui.login.LoginActivity"
    style="@style/AssetOwl.Layout.MatchWidthAndMatchHeight">
    <LinearLayout
        style="@style/AssetOwl.Layout.LinearLayout.Vertical.NoPadding"
        android:background="@color/colorBackground">

        <include android:id="@+id/tool_bar"
            layout="@layout/custom_toolbar_splash_screen"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout android:id="@+id/login_form"
                style="@style/AssetOwl.Component.LoginForm">
                <LinearLayout
                    style="@style/AssetOwl.Layout.MatchWidthAndWrapHeight"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutUsername"
                        style="@style/AssetOwl.Component.LoginTextInputLayout"
                        android:hint="@string/prompt_username"
                        app:passwordToggleEnabled="true">
                        <android.support.design.widget.TextInputEditText android:id="@+id/username"
                            style="@style/AssetOwl.Component.LoginEditText"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutPassword"
                        style="@style/AssetOwl.Component.LoginTextInputLayout"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/prompt_password">
                        <android.support.design.widget.TextInputEditText android:id="@+id/password"
                            style="@style/AssetOwl.Component.LoginEditText"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/username_sign_in_button"
                        android:text="@string/action_sign_in"
                        style="@style/AssetOwl.Button.Large"
                        android:layout_marginTop="@dimen/login_button_login_margin_top"/>

                    <TextView
                        android:id="@+id/txt_error_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/txt_error_message_margin_top"
                        style="@style/AssetOwl.ErrorText"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.assetowl.android.ui.component.spinner.LoadingSpinner
        android:id="@+id/login_loading_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>